# .dotfiles

./: .aliases  .dmrc  .face  .fonts.conf  .gtkrc-2.0  .p10k.zsh  .python_startup.py  .tmux.conf  .zsh_alias  .zshrc  LICENSE  README.md  apps.txt  f.py  package.txt  pyproject.toml  python.py
.config/: ascii-base.txt  ascii.txt  gamemode.ini  libinput-gestures.conf  starship.toml
.config/ArcMenu/: ArcMenu  ArcTheme
.config/Code/User/: keybindings.json  settings.json  spellright.dict  vsc.css  vsc.js
.config/Code/User/snippets/: snippet.code-snippets
.config/Dash to Dock/: dash-to-dock
.config/Dash-to-Panel/: dash-to-panel
.config/Enhancer for YouTube/: Enhancer-for-YouTube.json
.config/Kid3/: Kid3.conf
.config/alacritty/: alacritty.yml
.config/autostart/: libinput-gestures.desktop  python3.desktop  video-wallpaper.desktop
.config/btop/: btop.conf
.config/btop/themes/: proxzima.theme
.config/cava/: config
.config/fish/: config.fish  fish_variables
.config/fish/functions/: nvm.fish
.config/geany/: geany.conf  keybindings.conf  ui_toolbar.xml
.config/geany/colorschemes/: Sweet-Dracula.conf
.config/geany/plugins/addons/: addons.conf
.config/geany/plugins/filebrowser/: filebrowser.conf
.config/geany/plugins/geanylua/: hotkeys.cfg  toggle-menu-bar.lua
.config/geany/plugins/git-changebar/: git-changebar.conf
.config/geany/plugins/treebrowser/: treebrowser.conf
.config/htop/: htoprc
.config/hypr/: autostart  hypridle.conf  hyprland.conf  hyprlock.conf  mocha.conf
.config/hypr/store/: dynamic_out  latest_notif
.config/kitty/: kitty.conf  scroll_mark.py  search.py
.config/lapce-stable/: settings.toml  workspaces.toml
.config/lapce-stable/lapce.db/: db  snap.000000000001555F
.config/lite-xl/: error.txt  init.lua  session.lua
.config/lite-xl/colors/: dracula.lua
.config/lsd/: config.yaml
.config/mpv/: mpv.conf
.config/mpv/scripts/: morden.lua
.config/neofetch/: config.conf  config.conf.bak
.config/nvim/: init.vim
.config/nvim/lua/custom/: chadrc.lua  diff.patch  headers.lua  highlights.lua  init.lua  mappings.lua  override.lua
.config/nvim/lua/custom/plugins/: init.lua  (+7 more)
.config/nvim/lua/ui/: icons.lua
.config/qimgv/: qimgv.conf  savedState.conf  theme.conf
.config/ranger/: rc.conf  scope.sh
.config/rpcs3/: config.yml
.config/screenruler/: settings.yml
.config/swaync/: config.json  style.css
.config/tofi/: tofi.clip.conf  tofi.conf  tofi.launcher.conf
.config/uGet/: Setting.json
.config/waybar/: config.jsonc  style.css
.config/wlogout/: actions  launch.sh  layout  style.css
.config/wofi/: config  style.css
.devilspie/: blur.ds
.icons/default/: index.theme
.ipython/profile_default/: ipython_config.py
.local/share/arcmenu/: stylesheet.css
.local/share/fonts/delugia-complete/: .uuid
.local/share/fonts/delugia-mono-complete/: .uuid
.local/share/nemo/actions/: mediainfo.nemo_action
.mongodb/mongosh/: config
.mpd/: mpd.db  mpdstate
.mpd/playlists/: All Time.m3u  Trance ⚡.m3u
.ncmpcpp/: config  config-art
.ncmpcpp/scripts/: album-art  ncmpcpp-art
.scripts/: appindicator.py  caway  color-picker  hyprland_move_ws  launch_waybar  lock  screenshot  screenshot_full  updates  wall  wttr
.scripts/tools/: expand  expand_toolbar  swww
Templates/: CSS.css  Eglamour.odp  HTML.html  Modern Design.odp  Word.odt
assets/: dots.txt
usr/share/gedit/styles/: dracula.xml
usr/share/gtksourceview-4/styles/: dracula.xml
(+5 files in other folders)
